--- a/index.html
+++ b/index.html
@@ -50,29 +50,35 @@
         class="bg-moderateViolet rounded-lg shadow-xl min-h-[282px] md:col-span-2 flex flex-col gap-y-4 pt-[26px] pb-8 px-8 text-white">
         <div class="flex">
           <div>
-            <img src="" alt="">
+            <img src="./images/image-daniel.jpg" alt="picture of daniel "
+              class="max-h-[36px] max-w-[36px] rounded-full border-2 border-solid border-[#A775F1]">
           </div>
-          <div>
-            <p>Daniel Clifford</p>
-            <p>Verifed Graduate</p>
+          <div class="ml-2">
+            <p class="font-semibold text-[13px]">Daniel Clifford</p>
+            <p class="text-[11px] opacity-50">Verifed Graduate</p>
           </div>
         </div>
         <div>
-          <p>I recived a job offer mid-course, and then subjects i learned were current, if not more so, in the company
+          <p class="font-semibold text-[20px] leading-6">I recived a job offer mid-course, and then subjects i learned
+            were
+            current, if not more so, in the company
             i joined. I honestly feel i got every penny's worth</p>
         </div>
         <div>
-          <p>"I was en EMT for many years before I joined the bootcamp. I've been looking to make a transition and have
+          <p class="text-[13px] leading-[1.125rem] opacity-70">"I was en EMT for many years before I joined the
+            bootcamp. I've been
+            looking to make a transition and have
             heard some people who had am amazing experience here. I signed up for the tree intro course and found it
             incredibly fun! I enrolled shortly thereafter. The next 12 weeks was the best - and most grueling - time of
             my life. Since completing the course, I’ve successfully switched careers, working as a Software Engineer at
             a VR startup." </p>
         </div>
       </div>
-      <div>
-        <div>
+      <div
+        class="bg-darkGrayishBlue rounded-lg shadow-xl max-h-[282px] flex flex-col gap-y-4 pt-[26px] pb-8 px-8 text-white">
+        <div class="flex">
           <div>
-            <img src="" alt="">
+            <img src="./images/image-jonathan.jpg" alt="" class="max-h-[36px] max-w-[36px] rounded-full">
           </div>
           <div>
             <p>Jonathan Walters</p>
