--- a/index.html
+++ b/index.html
@@ -80,17 +80,43 @@
           <div>
             <img src="./images/image-jonathan.jpg" alt="" class="max-h-[36px] max-w-[36px] rounded-full">
           </div>
-          <div>
-            <p>Jonathan Walters</p>
-            <p>Verifed Graduate</p>
+          <div class="ml-2">
+            <p class="font-semibold text-[13px]">Jonathan Walters</p>
+            <p class="text-[11px] opacity-50">Verifed Graduate</p>
           </div>
         </div>
         <div>
-          <p>The team was very supportive and kept me motivated</p>
+          <p class="font-semibold text-[20px] leading-6">The team was very supportive and kept me motivated</p>
         </div>
         <div>
-          <p>“ I started as a total newbie with virtually no coding skills. I now work as a mobile engineer for a big
+          <p class="text-[13px] leading-[1.125rem] opacity-70">“ I started as a total newbie with virtually no coding
+            skills. I now work as a mobile engineer for a big
             company. This was one of the best investments I’ve made in myself. “</p>
+        </div>
+      </div>
+      <div
+        class="bg-white rounded-lg shadow-xl min-h-[50px] md:row-span-2 flex flex-col gap-y-4 pt-[26px] pb-8 px-8 text-darkGrayishBlue">
+        <div class="flex">
+          <div>
+            <img src="images/image-kira.jpg" alt="picture of kira" class="max-h-[36px] max-w-[36px] rounded-full">
+          </div>
+          <div class="ml-2">
+            <p class="font-semibold text-[13px]">Kira Whittle</p>
+            <p class="text-[11px] opacity-50">Verified Graduate</p>
+          </div>
+        </div>
+        <div>
+          <p class="font-semibold text-[20px] leading-6">Such a life-changing experience. Highly recommended!</p>
+        </div>
+        <div>
+          <p class="text-[13px] leading-[1.125rem] opacity-70">“ Before joining the bootcamp, I’ve never written a line
+            of code. I needed some structure from professionals who can help me learn programming step by step. I was
+            encouraged to enroll by a former student of theirs who can only say wonderful things about the program. The
+            entire curriculum and staff did not disappoint. They were very hands-on and I never had to wait long for
+            assistance. The agile team project, in particular, was outstanding. It took my learning to the next level in
+            a way that no tutorial could ever have. In fact, I’ve often referred to it during interviews as an example
+            of my developent experience. It certainly helped me land a job as a full-stack developer after receiving
+            multiple offers. 100% recommend! ”</p>
         </div>
       </div>
     </div>
