update finishing and responsive

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
   <main class="min-h-screen flex items-center justify-center font-barlow">
     <div
       class="container mx-auto grid grid-cols-1 md:grid-cols-4 max-w-[1140px] min-h-[572px] gap-x-[30px] gap-y-[24px]">
+      <!-- card 1 -->
       <div
         class="bg-moderateViolet rounded-lg shadow-xl min-h-[282px] md:col-span-2 flex flex-col gap-y-4 pt-[26px] pb-8 px-8 text-white">
         <div class="flex">
@@ -74,6 +75,7 @@
             a VR startup." </p>
         </div>
       </div>
+      <!-- card 2 -->
       <div
         class="bg-darkGrayishBlue rounded-lg shadow-xl max-h-[282px] flex flex-col gap-y-4 pt-[26px] pb-8 px-8 text-white">
         <div class="flex">
@@ -117,6 +119,51 @@
             a way that no tutorial could ever have. In fact, I’ve often referred to it during interviews as an example
             of my developent experience. It certainly helped me land a job as a full-stack developer after receiving
             multiple offers. 100% recommend! ”</p>
+        </div>
+      </div>
+      <!-- card 4 -->
+      <div
+        class="bg-white rounded-lg shadow-xl min-h-[50px] flex flex-col gap-y-4 pt-[26px] pb-8 px-8 text-darkGrayishBlue">
+        <div class="flex">
+          <div>
+            <img src="images/image-jeanette.jpg" alt="picture of jeanette"
+              class="max-h-[36px] max-w-[36px] rounded-full">
+          </div>
+          <div class="ml-2">
+            <p class="font-semibold text-[13px]">Jeanette Harmon</p>
+            <p class="text-[11px] opacity-50">Verified Graduate</p>
+          </div>
+        </div>
+        <div>
+          <p class="font-semibold text-[20px] leading-6">An overall wonderful and rewarding experience</p>
+        </div>
+        <div>
+          <p class="text-[13px] leading-[1.125rem] opacity-70">“ Thank you for the wonderful experience! I now have a
+            job I really enjoy, and make a good living while doing something I love. ”</p>
+        </div>
+      </div>
+      <!-- card 5 -->
+      <div
+        class="bg-darkBlackishBlue rounded-lg shadow-xl min-h-[50px] md:col-span-2 flex flex-col gap-y-4 pt-[26px] pb-8 px-8 text-white">
+        <div class="flex">
+          <div>
+            <img src="images/image-patrick.jpg" alt="picture of patrick"
+              class="max-h-[36px] max-w-[36px] rounded-full border-2 border-solid border-[#A775F1]">
+          </div>
+          <div class="ml-2">
+            <p class="font-semibold text-[13px]">Patrick Abrams</p>
+            <p class="text-[11px] opacity-50">Verified Graduate</p>
+          </div>
+        </div>
+        <div>
+          <p class="font-semibold text-[20px] leading-6">Awesome teaching support from TAs who did the bootcamp
+            themselves. Getting guidance from them and learning from their experiences was easy.</p>
+        </div>
+        <div>
+          <p class="text-[13px] leading-[1.125rem] opacity-70">“ The staff seem genuinely concerned about my progress
+            which I find really refreshing. The program gave me the confidence necessary to be able to go out in the
+            world and present myself as a capable junior developer. The standard is above the rest. You will get the
+            personal attention you need from an incredible community of smart and amazing people. ”</p>
         </div>
       </div>
     </div>
